# ChangeLog for net-mail/tmda
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/tmda/Attic/ChangeLog,v 1.36 2003/10/15 03:04:12 agenkin Exp $

*tmda-0.87 (14 Oct 2003)

  14 Oct 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump.

*tmda-0.86 (02 Oct 2003)

  02 Oct 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump.

*tmda-0.82 (09 Aug 2003)

  09 Aug 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump.

*tmda-0.80 (16 Jun 2003)

  10 Jul 2003; Arcady Genkin <agenkin@gentoo.org> :
  Depending on Python >=2.2 (bug #23696).

  16 Jun 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump.

*tmda-0.79 (04 Jun 2003)

  04 Jun 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump.

*tmda-0.74 (14 Apr 2003)

  14 Apr 2003; Arcady Genkin <agenkin@gentoo.org> :
  Updated to 0.74.
  tmda-cgi is now distributed separately, so somebody would have to write
  an ebuild for that package now.
  Made sure all the stuff under contrib/ gets installed.

*tmda-0.71 ( 08 Mar 2003 )

  08 Mar 2003; Arcady Genkin <agenkin@gentoo.org> :
  Updated to 0.71.

*tmda-0.70 ( 23 Feb 2003 )

  23 Feb 2003; Arcady Genkin <agenkin@gentoo.org> :
  Updated to 0.70.
  New contrib scripts for vpomail users.
  Now packaging all of the the contrib stuff into /usr/lib/tmda/contrib.

*tmda-0.69 ( 05 Feb 2003 )

  05 Feb 2003; Arcady Genkin <agenkin@gentoo.org> :
  Updated to 0.69.

*tmda-0.68 ( 10 Jan 2003 )

  10 Jan 2003; Arcady Genkin <agenkin@gentoo.org> :
  Updated to 0.68.

*tmda-0.67 ( 02 Jan 2003 )

  02 Jan 2003; Arcady Genkin <agenkin@gentoo.org> :
  Updated for 0.67.
  Packaged the CGI script, included with TMDA.
 
*tmda-0.65 ( 16 Nov 2002 )

  16 Nov 2002; Arcady Genkin <agenkin@thpoon.com> tmda-0.65.ebuild :
  Version update.

*tmda-0.64 ( 09 Nov 2002 )

  09 Nov 2002; Arcady Genkin <agenkin@thpoon.com> tmda-0.64.ebuild :
  Version update.  Updated Python dependency to greater or equal than