@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/tmda
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/tmda/Attic/ChangeLog,v 1.36 2003/10/15 03:04:12 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/tmda/Attic/ChangeLog,v 1.37 2003/11/17 20:27:09 agenkin Exp $
+
+*tmda-0.89 (17 Nov 2003)
+
+  17 Nov 2003; Arcady Genkin <agenkin@gentoo.org> :
+  Version bump.
+  The docs have a new directory: html/img.
 
 *tmda-0.87 (14 Oct 2003)
 
